welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: illegal start of statement
	match {
        ^sleepIn:10: error: Unmatched closing brace '}' ignored here
 }
 ^